alignment fix in prosAndConsShowcase

--- a/src/components/sections/ProsAndConsShowcase/styles.module.scss
+++ b/src/components/sections/ProsAndConsShowcase/styles.module.scss
@@ -28,8 +28,6 @@
         grid-template-columns: auto 1fr;
         column-gap: 8px;
         font-size: clamp(calc(16rem/16), calc(18vw/7.68), calc(18rem/16));
-      }
-      .pros {
         align-items: center;
       }
     }
